# resand

./: Cargo.toml  README.md
src/: defs.rs  lib.rs  res_value.rs  stream.rs  string_pool.rs  table.rs  xml_names.rs  xmltree.rs
tests/: manifest.rs  res_value.rs  string_pool.rs
tests/data/: AndroidManifest.xml  resources.arsc
